--- a/frontend/src/common/css/Main.css
+++ b/frontend/src/common/css/Main.css
@@ -1,38 +1,145 @@
-*, *:before, *:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+
+.nav{
+    height: 64px;
+}
+.body{
+    margin-top: -64px;
+    height: 100%;
+}
+  .intro_text{
+    margin-top: 40%;
+    margin-left: 2rem;
+    /* position: relative; */
+    font-size: 1.3rem;
+    font-weight:bolder;
+    color: white;
+    
+    text-align: left;
   }
-  
-  body {
-    font-family: "Roboto", Helvetica, Arial, sans-serif;
-    background: #000;
-  }
-  .fwelcome_text{
-    margin-top: 30%;
+  .welcome_text{
+    margin-top: 5%;
+    margin-left: 1.2rem;
     position: relative;
-    font-size: 50px;
-    color: #FF2E63;
-    ;
+    font-size: 4.45rem;
+    font-weight:bolder;
+    color: #08D9D6;
+    text-shadow: 0.5rem -0.03rem 0rem  #FF2E63;
+    text-align: left;
   }
   .swelcome_text{
-    position: absolute;
-    font-size: 50px;
-    top: 28%;
+    position: relative;
+    margin-right: 2rem;
+    font-size: 4.45rem;
     color: #08D9D6;
+    font-weight: bolder;
+    text-shadow: 0.5rem -0.03rem 0rem #FF2E63;
+    text-align: right;
   }
+  .buttonbox{
+    display:flex;
+    text-align: left;
+    
+  }
+  .create_room{
+    margin-top: 3rem;
+    width: 20rem;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    font-size: 1.3rem;
+    height: 3.5rem;
+    margin-left: 15%;
+    border-radius: 35px;
+    background-color: #EAEAEA;
+    border: none;
+    box-shadow: 0rem 1.5rem 2rem rgba(8,217,214,0.2);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+  .create_room:hover{
+    box-shadow: 0rem 1.5rem 2rem rgba(8,217,214,0.4);
+    color: #08D9D6;
+    transform: translateY(-7px);
+  }
+  .into_room{
+    position: relative;
+    margin-top: 3rem;
+    width: 20rem;
+    height: 3.5rem;
+    font-size: 1.3rem;
+    margin-left: 15%;
+    border-radius: 35px;
+    font-weight: 600;
+    color : white;
+    border: none;
+    background-color: #FF2E63;
+    box-shadow: 0rem 1.5rem 2rem rgba(255,46,99,0.2);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+  .into_room:hover{
+    box-shadow: 0rem 1.5rem 2rem rgba(255,46,99,0.4);
+    color: black;
+    transform: translateY(-7px);
+  }
+  .dummy{
+    display: block;
+  }
+  @media(max-width:985px) {
+    .buttonbox{
+        display:flex;
+        text-align: center;
+    }
+    .intro_text{
+        margin-top: 15%;
+    }
+    .create_room{
+        margin-top: 2.5rem;
+        width: 17rem;
+        height: 3rem;
+        margin-left: 25%;
+        border-radius: 35px;
+        background-color: #08D9D6;
+        border: none;
+        box-shadow: 0rem 1rem 2rem rgba(8,217,214,0.1);
+        transition: all 0.3s ease 0s;
+        cursor: pointer;
+        outline: none;
+        margin-left: 0;
+    }
+    .into_room{
+        position: relative;
+        margin-top: 2.5rem;
+        width: 17rem;
+        height: 3rem;
+        margin-left: 15%;
+        border-radius: 35px;
+        color : white;
+        border: none;
+        background-color: #FF2E63;
+        box-shadow: 0rem 1rem 2rem rgba(255,46,99,0.1);
+        transition: all 0.3s ease 0s;
+        cursor: pointer;
+        outline: none;
+        margin-left: 0;
+    }
+    .dummy{
+        display: none;
+    }
+  }
+  
   .slider {
     overflow: hidden;
     position: relative;
-    height: 100vh;
-    color: #fff;
+    height: 100%;
     text-align: center;
   }
 
   .slider__slides {
-    margin-top: 10%;
+    margin-top: 15%;
     position: relative;
-    width: 85%;
+    width: 80%;
     height: 60%;
     display: inline-block;
     /* border: 2px solid black;
@@ -40,7 +147,7 @@
   }
 
   .slider__slide-parts {
-    z-index: -1;
+    /* z-index: -1; */
     position: absolute;
     left: 0;
     top: 0;
@@ -58,7 +165,7 @@
   .slider__slide-part-inner {
     overflow: hidden;
     position: relative;
-    border-radius: 10px;
+    border-radius: 50px;
     width: 100%;
     height: 100%;
     background-size: 0 0;
