--- a/frontend/src/components/Regist/RegistForm.module.css
+++ b/frontend/src/components/Regist/RegistForm.module.css
@@ -2,29 +2,49 @@
   box-sizing: border-box;
   background-color: #252a34;
 }
+
+.logo {
+  width: 250px;
+  height: 250px;
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+}
 .icon {
   display: flex;
-  /* margin-bottom: 10px; */
 }
-input {
+
+.icon.top {
+  margin-top: 100px;
+}
+.inputAndMsg {
+  display: flex;
+  flex-direction: column;
+}
+.inputForm {
   width: 240px;
-  border: none;
   border-bottom: 1px solid #eee;
-  color: #eee;
   margin-left: 10px;
-  /* margin-bottom: 30px; */
+  z-index: 1;
+}
+
+input {
+  border: none;
+  color: #eee;
+  width: 200px;
 }
 input::placeholder {
   color: #eee;
-  /* opacity: 50%; */
   font-size: 16px;
 }
-
+input:focus {
+  outline: none;
+  background-color: none;
+}
 .formBorder {
-  height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin-top: 50px;
 }
 
 .form {
@@ -51,16 +71,24 @@ input::placeholder {
   display: flex;
 }
 
+.birth input {
+  width: 240px;
+  border-bottom: 1px solid #eee;
+  margin-left: 10px;
+}
+
 select {
   width: 100px;
   border: none;
   font-size: 16px;
   color: #eee;
-  margin: 0 30px 0 10px;
+  margin-left: 10px;
+  margin-right: 40px;
   border-bottom: 1px solid #eee;
 }
 .amount {
   width: 100px;
+  border-bottom: 1px solid #eee;
 }
 
 .registBtn {
@@ -80,6 +108,43 @@ select {
   font-size: 10px;
 }
 
-.react-datepicker-wrapper {
-  width: 0;
+.confirmMsg {
+  color: #2db400;
+  padding: 5px 0 0 10px;
+  margin: 0;
+  font-size: 10px;
+}
+
+/* .checkBtn {
+  width: 40px;
+  height: 20px;
+  color: white;
+  background-color: #2db400;
+  border: none;
+  border-radius: 5px;
+  font-size: 10px;
+  cursor: pointer;
+} */
+
+.checkBtn,
+.sendBtn {
+  width: 40px;
+  height: 20px;
+  color: white;
+  background-color: #ff2e63;
+  border: none;
+  border-radius: 5px;
+  font-size: 10px;
+  cursor: pointer;
+}
+
+.confirmBtn {
+  width: 40px;
+  height: 20px;
+  color: black;
+  background-color: #08d9d6;
+  border: none;
+  border-radius: 5px;
+  font-size: 10px;
+  cursor: pointer;
 }
