[Update] 병합 후 변경된 디자인 수정

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,10 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
   background-color: #282c34;
 }
-html, body, #root, .App {
+html,
+body,
+#root,
+.App {
   height: 100%;
 }
