--- a/frontend/src/components/Regist/RegistForm.module.css
+++ b/frontend/src/components/Regist/RegistForm.module.css
@@ -4,19 +4,14 @@
 }
 
 .logo {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: transparent;
-  /* position: absolute; */
-  /* top: 0; */
 }
 .icon {
   display: flex;
 }
-/* 
-.icon.top {
-  margin-top: 100px;
-} */
+
 .inputAndMsg {
   display: flex;
   flex-direction: column;
@@ -78,12 +73,12 @@ input:focus {
   margin-left: 10px;
 }
 
-select {
+.icon > select {
   width: 100px;
   border: none;
   font-size: 16px;
   color: #eee;
-  margin-left: 10px;
+  margin-left: 5px;
   margin-right: 40px;
   border-bottom: 1px solid #eee;
 }
@@ -107,6 +102,7 @@ select {
   padding: 5px 0 0 10px;
   margin: 0;
   font-size: 10px;
+  float: left;
 }
 
 .confirmMsg {
