--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -2,11 +2,11 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Poppins:wght@400;500;600&display=swap');
 
-* {
+/* * {
     background-color: #252A34;
     color: #eee;
     font-family: 'Poppins', sans-serif;
-  }
+  } */
 
 .inputRow {
     width :400px;
@@ -89,7 +89,7 @@
 .errorMsg {
     position: relative;
     color : #FF5722;
-    font-size: 16px;
+    font-size: 15px;
     margin-bottom: 0px;
     margin-top: 10px;
 }
@@ -111,6 +111,7 @@
     box-shadow: 0px 0.5rem 1.5rem rgba(255, 185, 203, 0.1);
     border-radius: 10px;
     border: none;
+    color: white;
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
@@ -138,6 +139,8 @@
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     cursor: pointer;
+    background-color: transparent;
+    color: white;
 }
 
 .findPwdBtn {
@@ -145,5 +148,6 @@
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     cursor: pointer;
-    
+    background-color: transparent;
+    color: white;
 }
