--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -117,7 +117,32 @@
     font-weight: bold;
     cursor: pointer;
     outline: none;
+    transition : .2s;
+    /* overflow: hidden; */
+    text-align : center;
 }
+
+.btnText {
+    transition : .3s;
+    color: white;
+    padding-top: 4px;
+}
+
+.btnText2 {
+    color : #FFF;
+  }
+
+.btnTwo {
+    position : relative;
+    width : 40px;
+    height : 40px;
+    margin-top: -44px;
+    padding-top: 0px;
+    background : #26A69A;
+    left : -90px;
+    transition : .3s;
+    border-radius: 10px;
+  }
 
 .registBtn {
     width: 180px;
@@ -132,6 +157,26 @@
     font-weight: bold;
     cursor: pointer;
     outline: none;
+}
+
+
+
+.loginBtn:hover:not([disabled]) {
+    transform: translateY(-4px);
+    box-shadow: 0rem 0.5rem 1.5rem rgba(82, 240, 237, 0.1);
+}
+
+/* .loginBtn:hover .btnText{ 
+    margin-left : 65px;
+  } */
+
+.loginBtn:active {
+box-shadow: 0px 5px 6px rgba(0,0,0,0.3);
+}
+
+.registBtn:hover {
+    transform: translateY(-4px);
+    box-shadow: 0rem 0.5rem 1.5rem rgba(82, 240, 237, 0.1);
 }
 
 .findIdBtn {
@@ -150,4 +195,9 @@
     cursor: pointer;
     background-color: transparent;
     color: white;
+}
+
+.loginBtn:disabled { 
+    color: #969696a4; 
+    background-color: #eee;
 }
