--- a/frontend/src/components/FindPwd/FindPwd.module.css
+++ b/frontend/src/components/FindPwd/FindPwd.module.css
@@ -86,6 +86,7 @@
     border: none;
     border-bottom: 2px solid;
     color: white;
+    background-color: transparent;
 }
 
 .inputData::placeholder {
