#S06P12A507-66/비밀번호 찾기/재설정 페이지 폼 및 axios 구현

--- a/frontend/src/components/FindPwd/FindPwd.module.css
+++ b/frontend/src/components/FindPwd/FindPwd.module.css
@@ -126,3 +126,12 @@
   transform: translateY(-4px);
   box-shadow: 0rem 0.5rem 1.5rem rgba(243, 171, 188, 0.212);
 }
+
+.errMsg {
+  position: relative;
+  color: #ff5722;
+  font-size: 15px;
+  margin-bottom: 0px;
+  margin-top: 10px;
+  white-space: pre-wrap;
+}
