--- a/frontend/src/components/RoomList/RoomList.module.css
+++ b/frontend/src/components/RoomList/RoomList.module.css
@@ -1,7 +1,10 @@
+/* .body{
+    overflow: hidden;
+} */
 .searchbox{
     position: relative;
     text-align: center;
-    margin-top: 2%;
+    margin-top: 90px;
 }
 .searchdiv{
     position: relative;
@@ -48,22 +51,35 @@
 }
 .list{
     margin-top: 5%;
-    height: 100%;
     text-align: center;
+    height: 74vh;
+    background-color: #252a34;
+    overflow: scroll;
+}
+.list::-webkit-scrollbar { 
+    display: none;
+    width: 0 !important;
 }
 .room{
     position: relative;
-    background-color: #EEEEEE;
+    /* background-color: ; */
     width: 400px;
     height: 500px;
+    
     /* margin-bottom: 10%; */
-    margin: 0 auto 10%;
+    margin: 9px auto 15%;
     border-radius: 25px;
     border-style: none;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+}
+.room:hover{
+    transform: translateY(-7px);
 }
 .roomthumb{
     width: 100%;
     height: 300px;
+    border-radius: 25px 25px 0px 0px;
 }
 .roomlabel{
     position: absolute;
@@ -83,4 +99,55 @@
 	align-self: center;
 	width: 20px;
 	height: 20px;
+}
+.about {
+    text-align: left;
+    background: rgba(238, 238, 238, 0.1);
+    height: 200px;
+    border-radius: 0px 0px 25px 25px;
+}
+.about h3{
+    /* display: inline-block; */
+    color :#EEEEEE;
+    float: left;
+    opacity: 1;
+    margin: 15px 10px;
+}
+.about h5{
+    color :#EEEEEE;
+    float: left;
+    opacity: 1;
+    margin: 8px 10px;
+    padding: 0px 30px 0px 0px;
+}
+.footer{
+    position: absolute;
+    color :#EEEEEE;
+    width: 100%;
+    height: 50px;
+    top : 450px;
+    /* margin-left: 40px; */
+}
+.footer h5{
+    margin-top: 10px;
+    float: left;
+}
+.footer h3{
+    float: right;
+    font-weight: bold;
+    margin-top: 5px;
+    margin-right: 10px;
+}
+.fulluser{
+    color : #ff2e63;
+}
+.clock{
+    float: left;
+    margin : 13px 10px 0px 10px;
+}
+.lock{
+    float: right;
+    margin: 15px 15px;
+    width: 30px;
+    height: 30px;
 }
