[Fix] css 깨짐 수정

--- a/frontend/src/components/RoomList/RoomList.module.css
+++ b/frontend/src/components/RoomList/RoomList.module.css
@@ -1,6 +1,6 @@
-/* .body{
-    overflow: hidden;
-} */
+.body{
+    margin: 0 auto;
+}
 .searchbox{
     position: relative;
     text-align: center;
