--- a/frontend/src/components/RoomList/RoomList.module.css
+++ b/frontend/src/components/RoomList/RoomList.module.css
@@ -1,5 +1,8 @@
 .container{
-    margin: 100px auto;
+    margin: 20px;
+}
+.srow{
+    margin : 30px auto 0px 0px;
 }
 .searchbox{
     position: relative;
@@ -49,9 +52,9 @@
     appearance: none;
 }
 .list{
-    margin-top: 5%;
+    margin-top: 40px;
     text-align: center;
-    height: 74vh;
+    height: 78vh;
     background-color: #252a34;
     overflow: scroll;
 }
@@ -66,7 +69,7 @@
     height: 500px;
     
     /* margin-bottom: 10%; */
-    margin: 45px auto 15%;
+    margin: 50px auto 15%;
     border-radius: 25px;
     border-style: none;
     transition: all 0.3s ease 0s;
