#S06P12A507-147/[Update] 캘린더 페이지 수정

--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -101,8 +101,8 @@
   margin-bottom: 20px;
 }
 .mainTitle {
-  font-size: 32px;
-  color: #eee;
+  font-size: 30px;
+  color: #252a34;
 }
 .subTitle {
   font-size: 16px;
